--- a/materi1.html
+++ b/materi1.html
@@ -52,7 +52,7 @@
     Cara sederhana untuk mulai mengenal diri sendiri dapat dilakukan melalui refleksi harian,
     menuliskan jurnal, atau bertanya pada orang terdekat tentang bagaimana mereka melihat diri kita.
     Dari sana, kita bisa membandingkan pandangan diri sendiri dengan orang lain, lalu mengambil
-    pelajaran untuk berkembang. Proses ini tidak terjadi dalam satu hari — tetapi semakin kita
+    pelajaran untuk berkembang. Proses ini tidak terjadi dalam satu hari tetapi semakin kita
     konsisten, semakin jelas pula gambaran tentang siapa diri kita sebenarnya.
   </p>
 
@@ -63,7 +63,7 @@
   </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){
@@ -74,3 +74,4 @@ function bukaMateri(){
 
 </body>
 </html>
+
