Fix HTML formatting and structure

--- a/materi10.html
+++ b/materi10.html
@@ -24,7 +24,7 @@
 
 <section>
 <p>
-Lingkungan memang berpengaruh — keluarga, teman, dan sekolah ikut membentuk cara kita
+Lingkungan memang berpengaruh keluarga, teman, dan sekolah ikut membentuk cara kita
 berpikir. Namun, pada akhirnya kendali utama tetap berada di tangan kita sendiri.
 Sikap yang kita pilih, kata-kata yang kita ucapkan, dan keputusan yang kita ambil,
 semuanya membangun kepribadian masa depan.
@@ -44,3 +44,4 @@ function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)
 
 </body>
 </html>
+
