--- a/materi10.html
+++ b/materi10.html
@@ -36,7 +36,7 @@ bijak. Inilah dasar yang membuat seseorang dipercaya dan dihormati oleh orang la
 </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)location.href=h;}
@@ -44,4 +44,5 @@ function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)
 
 </body>
 </html>
+
 
