--- a/materi12.html
+++ b/materi12.html
@@ -36,7 +36,7 @@ membangun rasa percaya diri yang sehat.
 </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)location.href=h;}
@@ -44,3 +44,4 @@ function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)
 
 </body>
 </html>
+
