Fix HTML formatting and update footer text

--- a/materi13.html
+++ b/materi13.html
@@ -25,8 +25,8 @@
 <section>
 <p>
 Tidak ada orang yang langsung menjadi sempurna. Pengembangan kepribadian adalah proses
-panjang yang berlangsung seumur hidup. Setiap pengalaman — baik menyenangkan maupun
-menyakitkan — adalah pelajaran yang membentuk diri kita.
+panjang yang berlangsung seumur hidup. Setiap pengalaman  baik menyenangkan maupun
+menyakitkan  adalah pelajaran yang membentuk diri kita.
 </p>
 <p>
 Selama seseorang mau belajar, memperbaiki diri, dan terbuka terhadap masukan, maka ia
@@ -35,7 +35,7 @@ untuk melangkah lebih jauh.
 </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)location.href=h;}
@@ -43,3 +43,4 @@ function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)
 
 </body>
 </html>
+
