Fix HTML formatting and update footer text

--- a/materi14.html
+++ b/materi14.html
@@ -35,7 +35,7 @@ memperkuat karakter dan membuka kesempatan baru.
 </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)location.href=h;}
@@ -43,3 +43,4 @@ function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)
 
 </body>
 </html>
+
