Fix HTML formatting and content structure

--- a/materi2.html
+++ b/materi2.html
@@ -36,8 +36,8 @@
   <p>
     Banyak orang gagal bukan karena tidak mampu, tetapi karena kurang disiplin dalam memulai.
     Sedikit demi sedikit, kebiasaan menunda membuat pekerjaan menumpuk dan akhirnya terasa berat.
-    Dengan membangun rutinitas yang jelas — seperti bangun lebih awal, menyiapkan daftar tugas,
-    dan mengerjakan hal penting lebih dulu — kita melatih diri untuk lebih bertanggung jawab.
+    Dengan membangun rutinitas yang jelas seperti bangun lebih awal, menyiapkan daftar tugas,
+    dan mengerjakan hal penting lebih dulu kita melatih diri untuk lebih bertanggung jawab.
   </p>
 
   <p>
@@ -63,7 +63,7 @@
   </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){
@@ -74,3 +74,4 @@ function bukaMateri(){
 
 </body>
 </html>
+
