Fix HTML encoding issues in materi3.html

--- a/materi3.html
+++ b/materi3.html
@@ -42,7 +42,7 @@
 
   <p>
     Orang yang bertanggung jawab juga bersedia mengakui kesalahannya.
-    Mengakui kesalahan bukan berarti lemah — justru menunjukkan keberanian
+    Mengakui kesalahan bukan berarti lemah justru menunjukkan keberanian
     dan kejujuran. Dari pengakuan itu, seseorang dapat memperbaiki diri,
     meminta maaf jika perlu, dan berusaha agar kesalahan yang sama tidak terulang.
   </p>
@@ -63,7 +63,7 @@
   </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){
@@ -74,3 +74,4 @@ function bukaMateri(){
 
 </body>
 </html>
+
