Fix HTML encoding issues in materi4.html

--- a/materi4.html
+++ b/materi4.html
@@ -70,7 +70,7 @@
   </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){
@@ -81,3 +81,4 @@ function bukaMateri(){
 
 </body>
 </html>
+
