--- a/materi6.html
+++ b/materi6.html
@@ -67,7 +67,7 @@
   </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){
@@ -78,3 +78,4 @@ function bukaMateri(){
 
 </body>
 </html>
+
