Fix HTML formatting and structure in materi7.html

--- a/materi7.html
+++ b/materi7.html
@@ -58,7 +58,7 @@
   </p>
 
   <p>
-    Jadi, membangun etika dan profesionalisme adalah proses — dimulai dari kebiasaan kecil,
+    Jadi, membangun etika dan profesionalisme adalah proses dimulai dari kebiasaan kecil,
     seperti disiplin, berkata jujur, dan menghormati orang lain. Semakin sering dilatih,
     semakin kuat karakter yang terbentuk.
   </p>
@@ -72,4 +72,5 @@ function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)
 
 </body>
 </html>
+
 
