Fix HTML formatting and update footer text

--- a/materi8.html
+++ b/materi8.html
@@ -37,7 +37,7 @@
     Pengembangan diri dapat dilakukan dengan banyak cara, seperti membaca buku,
     mengikuti pelatihan, berdiskusi dengan orang yang lebih berpengalaman,
     mencari mentor, serta mencoba hal-hal baru yang menantang diri.
-    Setiap pengalaman — bahkan kegagalan — sebenarnya adalah kesempatan
+    Setiap pengalaman bahkan kegagalan sebenarnya adalah kesempatan
     untuk belajar dan memahami diri sendiri lebih baik.
   </p>
 
@@ -62,7 +62,7 @@
   </p>
 </section>
 
-<footer><p>© 2026 — Pengembangan Kepribadian</p></footer>
+<footer><p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p></footer>
 
 <script>
 function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)location.href=h;}
@@ -70,3 +70,4 @@ function bukaMateri(){const h=document.getElementById("pilihMateri").value;if(h)
 
 </body>
 </html>
+
