Update tentang.html with minor content changes

--- a/tentang.html
+++ b/tentang.html
@@ -32,8 +32,9 @@
 </div>
 
 <footer>
-  © 2026 • Web Pengembangan Kepribadian
+  © 2026 • Informatika C ! .Pengembangan Kepribadian
 </footer>
 
 </body>
 </html>
+
