--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </section>
 
 <footer>
-  <p>© 2026 — Pengembangan Kepribadian</p>
+  <p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p>
 </footer>
 
 <script>
@@ -57,3 +57,4 @@
 
 </body>
 </html>
+
