Fix HTML formatting and update footer text

--- a/materi.html
+++ b/materi.html
@@ -54,7 +54,7 @@
 </section>
 
 <footer>
-  <p>© 2026 — Pengembangan Kepribadian</p>
+  <p>© 2026 — Informatika C ! .Pengembangan Kepribadian</p>
 </footer>
 
 <script>
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
